--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ cortex-m-rt = "0.6.10"
 cortex-m-semihosting = "0.3.3"
 panic-halt = "0.2.0"
 panic-semihosting = "0.5.6"
+libm = "0.2.1"
 
 # Uncomment for the panic example.
 # panic-itm = "0.4.1"
